# kaggle-walmart-recruiting

./: .gitignore  README.md  create_feature.py  main.py  main_lr.py  pyproject.toml
notebooks/: baseline.html  baseline.ipynb  result_analysis.html  result_analysis.ipynb
sql/: walmart_feature_v1.sql  walmart_feature_v2.sql  walmart_feature_v3.sql  walmart_feature_v4.sql
src/: metrics.py  models.py  utils.py
yamls/: config.yaml
yamls/feature/: v1.yaml  v2.yaml  v3.yaml  v4.yaml
